fix(api-service): incorrect get groups path
